# Waves-In-Plasmas-Lecture

./: LICENSE  README.md  environment.yml  pyproject.toml
Slides/: 1_Introduction.ipynb  2_Review of Electromagnetics Waves.ipynb  3_Fluid Model.ipynb  4_Cold Plasma.ipynb  5_Cold Plasma Part 2.ipynb  6_Kinetic Plasma Model.ipynb  Appendix_Laplace_Transform.ipynb  Appendix_Sokhotski–Plemelj.ipynb  rise.css
Slides/figures/: Complex_Planes.pptx  Self_Consistent_Description.pptx
binder/: environment.yml
